--- a/css/style.css
+++ b/css/style.css
@@ -1600,9 +1600,119 @@ p.creator-subtitle {
 	padding-top: 1%;
 }
 
+p.final-text {
+	font-size: 20px;
+	line-height: 34px;
+	color: #000;
+	color: rgba(0,0,0,0.90);
+	text-align: left;
+	margin: 2% 13% 1%;
+	text-align: left;
+	width: 74%;
+}
+
+.green-button {
+	background: #76C44C;
+	color: white;
+	display: inline-block;
+	height: 60px;
+	width: 240px;
+	font-size: 24px;
+	text-decoration: none;
+	text-align: left;
+	padding: 20px;
+	border-radius: 10px;
+	margin: 2% 0 0;
+}
+
+.green-button small {
+	color: #000;
+	font-size: 14px;
+	display: inline-block;
+	margin: 5px 0 0;
+}
+
 /*
 	51
 */
+#mc_embed_signup {
+	font-size: 18px;
+	display: inline-block;
+	margin: 0 4% 0 0;
+	width: 40%;
+	position: relative;
+	border: 1px solid #aaa;
+	height: 47px;
+	border-radius: 5px;
+}
+
+#mce-EMAIL {
+	font-size: 18px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 70%;
+	padding: 12px;
+	color: #888;
+	border: none;
+	border-radius: 3px 0 0 3px;
+	outline: none;
+}
+
+#mc-embedded-subscribe {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: #73c261;
+	text-transform: uppercase;
+	border: none;
+	border-radius: 0 3px 3px 0;
+	height: 47px;
+	width: 27%;
+	color: #fff;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+hr {
+	width: 68%;
+	margin: 0 auto;
+}
+
+.final-box {
+	width: 70%;
+	margin: 2% 15% 0;
+	height: 80px;
+}
+
+.final-box p {
+	width: 40%;
+	display: inline-block;
+	text-align: left;
+	vertical-align: top;
+	padding: 0;
+	font-size: 17px;
+	line-height: 22px;
+	margin: 0 11% 0 4%;
+}
+
+.final-box .back-project {
+	color: #79C331;
+	font-size: 20px;
+	margin: 0 4% 0 0;
+	width: 40%;
+	display: inline-block;
+}
+
+.social {
+	margin: 0 4% 0 0;
+	width: 40%;
+	display: inline-block;
+}
+
+.social li {
+	display: inline-block;
+}
 
 /*
 	52
@@ -1646,74 +1756,6 @@ h3.profile-title {
 /*
 	11
 */
-
-p.final-text {
-	font-size: 20px;
-	line-height: 34px;
-	color: #000;
-	color: rgba(0,0,0,0.90);
-	padding: 0 18%;
-	text-align: left;
-	margin: 0 0 3%;
-}
-
-hr {
-	width: 64%;
-	margin: 0 auto 1%;
-}
-
-p.back-project {
-	background: url(../img/coracao.png) top left no-repeat;
-	padding: 0 0 0 20px;
-	font-size: 18px;
-	margin: 0 28%;
-	line-height: 32px;
-}
-
-
-.back-project a {
-	color: #73c261;
-}
-
-/* Mailchimp */
-#mc_embed_signup {
-	font-size: 18px;
-	display: inline-block;
-	margin: 0 auto 3%;
-	width: 40%;
-	position: relative;
-	border: 1px solid #aaa;
-	height: 46px;
-	border-radius: 5px;
-}
-
-#mce-EMAIL {
-	font-size: 18px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 70%;
-	padding: 12px;
-	color: #888;
-	border: none;
-	border-radius: 3px 0 0 3px;
-	outline: none;
-}
-
-#mc-embedded-subscribe {
-	position: absolute;
-	top: 0;
-	right: 0;
-	background: #73c261;
-	text-transform: uppercase;
-	border: none;
-	border-radius: 0 3px 3px 0;
-	height: 46px;
-	width: 27%;
-	color: #fff;
-	font-size: 18px;
-	cursor: pointer;
-}
 
 /* navigation */
 a.arrow-left {
